--- a/styles/_style.sass
+++ b/styles/_style.sass
@@ -11,7 +11,7 @@ body
   width: 100%
   height: 100vh
 
-  > div
+  > .routes-container
     display: flex
     flex-direction: column
     width: 100%
@@ -42,6 +42,7 @@ body
             &:hover
               background: #ddd
               border-bottom: 2px solid #999
+              cursor: pointer
 
             > a
               width: 100%
@@ -61,3 +62,6 @@ body
           margin-top: 0
           border-bottom: 2px solid #999
           color: #666
+
+.launch-item:hover
+  cursor: pointer
